--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>PageNotFound</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body id="bodyofnpage">
     <Header id="bruh">Pagenotfound :(</Header>
